--- a/app/src/main/res/layout/fragment_list_gurus.xml
+++ b/app/src/main/res/layout/fragment_list_gurus.xml
@@ -2,10 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:layout_height="match_parent">
 
     <ExpandableListView android:id="@+id/exp_list_gurus"
         android:layout_height="match_parent"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_width="match_parent" />
 
 </LinearLayout>
