--- a/app/src/main/res/layout/view_items_gurus.xml
+++ b/app/src/main/res/layout/view_items_gurus.xml
@@ -4,64 +4,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/ic_user"
-        android:src="@drawable/ic_profile"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="3dp" />
-
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:gravity="left" >
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/ic_user"
+            android:src="@drawable/ic_profile"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="3dp" />
 
         <TextView
             android:id="@+id/txt_guser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="sda"
+            android:text="Pedro Xavier"
             android:textSize="14sp"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="3dp"
             android:textColor="#333333"
             android:textStyle="bold" />
-
-        <LinearLayout
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:paddingBottom="2dp">
+        <TextView
+            android:id="@+id/txt_gpost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="2dp">
-            <TextView
-                android:id="@+id/txt_gpost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textAlignment="center"
-                android:textSize="11sp"
-                android:textColor="#d3d3d3"
-                android:text="ss"
-                />
-            <TextView
-                android:id="@+id/txt_separator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="·"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"/>
-            <TextView
-                android:id="@+id/txt_gvotes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textAlignment="center"
-                android:textSize="11sp"
-                android:textColor="#d3d3d3"
-                android:text="ss"
-                />
-
-        </LinearLayout>
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textAlignment="center"
+            android:textSize="11sp"
+            android:textColor="#d3d3d3"
+            android:text="13 publicaciones"
+            />
+        <TextView
+            android:id="@+id/txt_separator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="·"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"/>
+        <TextView
+            android:id="@+id/txt_gvotes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textAlignment="center"
+            android:textSize="11sp"
+            android:textColor="#d3d3d3"
+            android:text="- 3 votos"
+            />
 
     </LinearLayout>
 
