--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -12,7 +12,7 @@
         android:layout_marginTop="29dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
-        android:textColor="#6c6b6b" />
+        android:textColor="#6c6b6b" />-->
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -22,7 +22,6 @@
         android:layout_below="@+id/textView3"
         android:layout_alignLeft="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
-        android:layout_marginTop="34dp"
         android:checked="false" />
 
     <CheckBox
@@ -133,13 +132,13 @@
         android:layout_alignLeft="@+id/check_desarrollo"
         android:layout_alignStart="@+id/check_desarrollo" />
 
-    <Button
+    <!--<Button
+        android:id="@+id/btn_acept_preferences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Aceptar"
-        android:id="@+id/btn_aceptar_intereses"
         android:layout_marginTop="39dp"
         android:layout_below="@+id/check_comportamiento"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" />-->
 
 </RelativeLayout>
