--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -20,18 +20,21 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/txt_answers"
+            android:text="14 Respuestas"
             android:id="@+id/title_answers"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            />
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="15dp"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginLeft="5dp" />
 
         <ListView
             android:layout_width="wrap_content"
@@ -39,7 +42,8 @@
             android:id="@+id/listAnswer"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_weight="0.82" />
 
         <Button
             android:layout_width="match_parent"
