--- a/app/src/main/res/layout/fragment_item_guru.xml
+++ b/app/src/main/res/layout/fragment_item_guru.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:layout_height="match_parent">
 
 </LinearLayout>
