--- a/app/src/main/res/layout/fragment_item_post.xml
+++ b/app/src/main/res/layout/fragment_item_post.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="sda"
+            android:text="Que hacer cuando los niños se chupan los dedos.."
             android:textSize="14sp"
             android:textColor="#333333"
             android:textStyle="bold" />
@@ -25,8 +25,8 @@
         android:paddingTop="2dp">
         <ImageView
             android:onClick="profileOn"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:id="@+id/ic_user"
             android:src="@drawable/ic_profile"
             android:layout_marginLeft="5dp"
@@ -37,27 +37,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text=""
+                android:text="Pedro Xavier"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
                 android:textColor="#999999"
                 android:textSize="12sp" />
-            <TextView
-                android:id="@+id/txt_pdatetime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text=""
-                android:layout_marginTop="3dp"
-                android:textColor="#999999"
-                android:textSize="12sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/txt_pdatetime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="hace 2 dias"
+            android:layout_marginTop="3dp"
+            android:textColor="#999999"
+            android:layout_marginLeft="7dp"
+            android:textSize="12sp" />
     </LinearLayout>
 
         <!-- Tags -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
             android:paddingTop="2dp">
             <ImageView
                 android:id="@+id/ic_tag"
