--- a/app/src/main/res/layout/fragment_item_question.xml
+++ b/app/src/main/res/layout/fragment_item_question.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="sda"
+            android:text="Telmo Riofrio"
             android:textSize="14sp"
             android:textColor="#333333"
             android:textStyle="bold" />
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
+            android:text="hace 1 hora"
             android:layout_marginTop="3dp"
             android:textColor="#999999"
             android:textSize="12sp" />
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh"
             android:singleLine="false"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="12sp"
-                android:text="dd"/>
+                android:text="Bebés"/>
         </LinearLayout>
 
         <!-- Reporte -->
