--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -1,44 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="left"
-        android:layout_gravity="left">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:id="@+id/icon_favorite"
-            android:src="@drawable/icon_star"
-            android:layout_gravity="top"
-            android:layout_margin="5dp" />
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:id="@+id/icon_up"
-            android:src="@drawable/icon_thumbsup"
-            android:layout_gravity="left|bottom"
-            android:layout_margin="5dp" />
-    </LinearLayout>
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="right">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
             android:id="@+id/iconUser"
-            android:src="@drawable/user_profile"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ico_profile2_32"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_gravity="left" />
@@ -50,41 +26,165 @@
             android:layout_marginLeft="10dp"
             android:gravity="left">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Nombre usuario"
-                android:id="@+id/answerTitle"
-                android:textSize="14sp"
-                android:textColor="#222222"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Nombre usuario"
+                    android:id="@+id/answerTitle"
+                    android:textSize="14sp"
+                    android:textColor="#222222"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="hace 3 horas"
-                android:id="@+id/answerDate"
-                android:layout_marginTop="5dp"
-                android:textColor="#999999"
-                android:textSize="12sp" />
-
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Respouesta de prueba"
-                android:id="@+id/answerContent"
-                android:layout_marginTop="5dp"
-                android:ellipsize="end"
-                android:lines="3"
-                android:textColor="#666666"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="hace 3 horas"
+                    android:id="@+id/answerDate"
+                    android:layout_marginTop="1dp"
+                    android:textColor="#999999"
+                    android:textSize="12sp" />
+            </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Lorem ipsum dolor sit amet, cosectetur adisisping elit. Cras cursus"
+                    android:id="@+id/answerContent"
+                    android:layout_marginTop="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:textColor="#666666"
+                    android:textSize="14sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <!-- Tags -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="2dp">
+                    <ImageView
+                        android:id="@+id/iconTag"
+                        android:onClick="profileOn"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/icon_tag"
+                        android:layout_marginTop="3dp" />
+                    <TextView
+                        android:id="@+id/pregunta_tag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textSize="12sp"
+                        android:text="dd"/>
+                </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
+    </LinearLayout>
 
+    <!--Acciones-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_border_top"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center">
+
+        <!--Me Gusta-->
+        <RelativeLayout
+            android:layout_width="130dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:id="@+id/icon_up"
+                    android:src="@drawable/ico_like"
+                    android:layout_marginLeft="25dp" />
+                <TextView
+                    android:id="@+id/btn_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="11sp"
+                    android:paddingTop="5sp"
+                    android:paddingLeft="5sp"
+                    android:text="Me Gusta"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <!--Destacar/Sugerir publicación-->
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="19dp"
+                    android:layout_height="20dp"
+                    android:id="@+id/ico_favorite"
+                    android:src="@drawable/ico_suggest"
+                    android:layout_gravity="top"
+                    android:layout_margin="5dp" />
+                <TextView
+                    android:id="@+id/btn_sugest_publication"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="11sp"
+                    android:paddingTop="8sp"
+                    android:text="Sugerir Publicación"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <!--Destacar/Sugerir Votar Padre-->
+        <RelativeLayout
+            android:layout_width="110dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/ico_vote_father"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ico_vote_father"
+                    android:layout_gravity="top"
+                    android:layout_margin="5dp" />
+                <TextView
+                    android:id="@+id/text_vote_father"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="11sp"
+                    android:paddingTop="8sp"
+                    android:text="Votar Padre"/>
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
