--- a/app/src/main/res/drawable/border_bottom_primary.xml
+++ b/app/src/main/res/drawable/border_bottom_primary.xml
@@ -6,10 +6,11 @@
         android:right="-4dp"
         android:top="-4dp">>
         <shape android:shape="rectangle" >
-            <solid android:color="#cdeef2" />
+            <solid android:color="#ffffff" />
             <stroke
                 android:width="1dp"
                 android:color="@color/colorPrimary" />
         </shape>
     </item>
 </layer-list>
+
