--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,12 +53,12 @@
         android:textColorHint="#c2c2c2" />
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="35dp"
-        android:text="@string/btn_enter"
-        android:textColor="#35adbd"
         android:id="@+id/btn_enter"
-        android:background="@drawable/background_button_white"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:text="@string/btn_enter"
+        android:background="@drawable/button_fill_primary"
+        android:textColor="@color/colorPrimaryText"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/input_password"
@@ -115,13 +115,13 @@
         android:layout_marginTop="25dp" />
 
     <Button
-        android:layout_width="290dp"
-        android:layout_height="35dp"
-        android:text="@string/btn_entrar_facebook"
         android:id="@+id/button_gmail"
+        android:layout_width="290dp"
+        android:layout_height="40dp"
+        android:text="@string/btn_entrar_facebook"
         android:clickable="true"
-        android:background="@drawable/background_button_white"
-        android:textColor="#35adbd"
+        android:background="@drawable/button_fill_primary"
+        android:textColor="@color/colorPrimaryText"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp" />
