--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,11 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1">
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+            <ImageButton
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/ico_edit"/>
+                android:background="@drawable/ico_back"
+                android:onClick="editProfile"/>
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="90dp"
@@ -30,6 +31,13 @@
                 android:layout_marginLeft="110dp"
                 android:layout_gravity="center"
                 android:layout_weight="0.06" />
+            <ImageButton
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/ico_edit"
+                android:layout_marginLeft="90dp"
+                android:onClick="editProfile"/>
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -70,7 +78,7 @@
         android:background="@color/backgroundGrey"
         android:orientation="horizontal">
         <RelativeLayout
-            android:layout_width="236dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -151,7 +159,7 @@
 
         <!--Acciones Guru-->
         <RelativeLayout
-            android:layout_width="100dp"
+            android:layout_width="115dp"
             android:layout_height="84dp"
             android:gravity="left">
             <LinearLayout
@@ -160,25 +168,29 @@
                 android:orientation="vertical"
                 android:gravity="center">
                 <LinearLayout
+                    android:id="@+id/btn_ask_guru"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center"
                     android:background="@drawable/background_button_white"
-                    android:padding="3dp">
+                    android:padding="4dp"
+                    android:clickable="true"
+                    android:onClick="askGuru">
                     <ImageView
                         android:id="@+id/ico_question"
                         android:layout_width="19dp"
                         android:layout_height="25dp"
                         android:src="@drawable/ico_question"/>
                     <TextView
-                        android:id="@+id/btn_publication_guru"
+                        android:id="@+id/text_question_guru"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Preguntar"
-                        android:textSize="11dp"
+                        android:textSize="12dp"
                         android:layout_marginTop="0dp"
                         android:layout_marginLeft="3dp"
+                        android:textColor="@color/colorPrimary"
                         android:layout_gravity="center" />
                 </LinearLayout>
                 <LinearLayout
@@ -188,7 +200,9 @@
                     android:orientation="horizontal"
                     android:gravity="center"
                     android:background="@drawable/background_button_white"
-                    android:padding="5dp">
+                    android:padding="6dp"
+                    android:clickable="true"
+                    android:onClick="publicationsGuru">
                     <ImageView
                         android:id="@+id/ico_publication"
                         android:layout_width="19dp"
@@ -199,8 +213,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Publicaciones"
-                        android:textSize="11dp"
+                        android:textSize="12dp"
+                        android:layout_marginLeft="5dp"
                         android:layout_marginTop="0dp"
+                        android:textColor="@color/colorPrimary"
                         android:layout_gravity="center"/>
                 </LinearLayout>
             </LinearLayout>
