--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -3,68 +3,86 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbarAlwaysDrawVerticalTrack="true">
+        <include
+            android:id="@+id/toolbar_action"
+            layout="@layout/toolbar_action">
+        </include>
+    <!-- Question -->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
-
         <include
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             layout="@layout/fragment_item_question" >
         </include>
-
     </LinearLayout>
 
+    <!-- Answers -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/lightGrey"
+
         android:weightSum="1">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="14 Respuestas"
-            android:id="@+id/title_answers"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:textSize="15dp"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginLeft="5dp" />
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="340dp"
-            android:id="@+id/listAnswer"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_weight="0.82" />
-
-        <Button
+        <!-- Container Answers -->
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="331dp"
+            android:layout_marginLeft="15dp"
+            android:orientation="vertical"
+            android:background="@color/colorPrimaryLabel"
+            android:layout_weight="0.90">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="14 Respuestas"
+                android:id="@+id/title_answers"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="15dp"
+                android:textColor="@color/mediumGrey"
+                android:layout_marginLeft="5dp" />
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/listAnswer"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/btn_answering"
-            android:text="Responder"
-            android:textColor="#FFFFFF"
-            android:layout_gravity="top"
-            android:background="@drawable/button_ask"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="90dp"
-            android:layout_marginLeft="90dp"
-            android:clickable="true"
-            android:onClick="answer"
-            android:layout_marginTop="10dp" />
-
+            android:layout_height="wrap_content"
+            android:gravity="center">
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:id="@+id/btn_answering"
+                android:text="Responder"
+                android:textColor="#FFFFFF"
+                android:textSize="13dp"
+                android:background="@drawable/button_fill_primary"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginRight="90dp"
+                android:layout_marginLeft="90dp"
+                android:clickable="true"
+                android:onClick="answer"/>
+        </LinearLayout>
 
     </LinearLayout>
-
     <!--<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,4 +92,5 @@
         android:layout_centerHorizontal="true"
         android:clickable="true"
         android:onClick="answer" />-->
+    </LinearLayout>
 </LinearLayout>
