--- a/app/src/main/res/layout/fragment_list_questions.xml
+++ b/app/src/main/res/layout/fragment_list_questions.xml
@@ -12,15 +12,17 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:id="@+id/btn_ask"
-        android:text="Hacer una pregunta"
+        android:text="Realizar una pregunta"
+        android:textSize="13dp"
         android:textColor="#FFFFFF"
         android:layout_gravity="bottom"
-        android:background="@drawable/button_ask"
+        android:background="@drawable/button_fill_primary"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="6dp"
         android:layout_marginRight="70dp"
         android:layout_marginLeft="70dp"
         android:clickable="true"
