--- a/app/src/main/res/layout/fragment_list_questions.xml
+++ b/app/src/main/res/layout/fragment_list_questions.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--<TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_main"
+        android:text="" />-->
+
     <ListView android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
